--- a/index.html
+++ b/index.html
@@ -4,49 +4,6 @@
     <title>Formulaire pour envoyer une Web Push Notification</title>
 </head>
 <body>
-    <h1>Envoyer une Web Push Notification</h1>
-    <form id="pushForm">
-        <label for="title">Titre :</label>
-        <input type="text" id="title" name="title" required><br>
-
-        <label for="message">Message :</label>
-        <input type="text" id="message" name="message" required><br>
-
-        <label for="url">URL :</label>
-        <input type="text" id="url" name="url"><br>
-
-        <button type="button" onclick="sendPushNotification()">Envoyer</button>
-    </form>
-
-    <script>
-        function sendPushNotification() {
-            const apiKey = 'dd7b7b3197466ed222a0b83279f01cb0';
-            const title = document.getElementById('title').value;
-            const message = document.getElementById('message').value;
-            const url = document.getElementById('url').value;
-
-            const data = {
-                title: title,
-                message: message,
-                url: url
-            };
-
-            fetch('https://api.pushalert.co/rest/v1/send', {
-                method: 'POST',
-                headers: {
-                    'Authorization': 'Bearer ' + apiKey,
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log('Notification envoyée avec succès !');
-            })
-            .catch(error => {
-                console.error('Erreur lors de l\'envoi de la notification :', error);
-            });
-        }
-    </script>
+<a href="appinfos.html?app=Cowabunga" target="_blank">Afficher</a>
 </body>
 </html>
