--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     const appName = urlParams.get('app');
 
     // Charger le fichier JSON externe contenant les informations des applications
-    const jsonURL = 'apps.json';
+    const jsonURL = 'https://ibinou.github.io/Push-Alert/apps.json';
     fetch(jsonURL)
         .then(response => response.json())
         .then(appData => {
