--- a/appinfos.html
+++ b/appinfos.html
@@ -9,48 +9,47 @@
     <h1>App Information</h1>
     <div id="appInfo"></div>
 
-<script>
-    // Function to parse URL parameters
-    function getUrlParameter(name) {
-        name = name.replace(/[\[]/, '\\[').replace(/[\]]/, '\\]');
-        var regex = new RegExp('[\\?&]' + name + '=([^&#]*)');
-        var results = regex.exec(location.search);
-        return results === null ? '' : decodeURIComponent(results[1].replace(/\+/g, ' '));
-    }
+    <script>
+        // Function to parse URL parameters
+        function getUrlParameter(name) {
+            name = name.replace(/[\[]/, '\\[').replace(/[\]]/, '\\]');
+            var regex = new RegExp('[\\?&]' + name + '=([^&#]*)');
+            var results = regex.exec(location.search);
+            return results === null ? '' : decodeURIComponent(results[1].replace(/\+/g, ' '));
+        }
 
-    // Main function to fetch and display app information
-    function displayAppInfo() {
-        // Fetch the JSON data (replace 'your_json_url_here' with the actual URL)
-        fetch('apps.json')
-            .then(response => response.json())
-            .then(data => {
-                const appId = getUrlParameter('id');
-                const appInfo = data.Utilities.find(app => app.name === appId);
+        // Main function to fetch and display app information
+        function displayAppInfo() {
+            // Fetch the JSON data (replace 'your_json_url_here' with the actual URL)
+            fetch('https://ibinou.github.io/Push-Alert/apps.json') // Replace 'your_json_url_here' with the actual URL of your JSON file
+                .then(response => response.json())
+                .then(data => {
+                    const appId = getUrlParameter('id');
+                    const appInfo = data.Utilities.find(app => app.name === appId);
 
-                if (appInfo) {
-                    // Build the HTML to display app information
-                    const appDiv = document.getElementById('appInfo');
-                    appDiv.innerHTML = `
-                        <h2>${appInfo.name}</h2>
-                        <p>Developer: ${appInfo.developer}</p>
-                        <p>Version: ${appInfo.version}</p>
-                        <p>Compatibility: ${appInfo.compatibility}</p>
-                        <p>Description: ${appInfo.description}</p>
-                        <img src="${appInfo.icon}" alt="${appInfo.name} Icon">
-                        <a href="${appInfo.ipa}" target="_blank" rel="noopener noreferrer">Download IPA</a>
-                    `;
-                } else {
-                    // Handle the case when the app ID is not found
-                    const appDiv = document.getElementById('appInfo');
-                    appDiv.innerHTML = '<p>App not found.</p>';
-                }
-            })
-            .catch(error => console.error('Error fetching app data:', error));
-    }
+                    if (appInfo) {
+                        // Build the HTML to display app information
+                        const appDiv = document.getElementById('appInfo');
+                        appDiv.innerHTML = `
+                            <h2>${appInfo.name}</h2>
+                            <p>Developer: ${appInfo.developer}</p>
+                            <p>Version: ${appInfo.version}</p>
+                            <p>Compatibility: ${appInfo.compatibility}</p>
+                            <p>Description: ${appInfo.description}</p>
+                            <img src="${appInfo.icon}" alt="${appInfo.name} Icon">
+                            <a href="${appInfo.ipa}" target="_blank" rel="noopener noreferrer">Download IPA</a>
+                        `;
+                    } else {
+                        // Handle the case when the app ID is not found
+                        const appDiv = document.getElementById('appInfo');
+                        appDiv.innerHTML = '<p>App not found.</p>';
+                    }
+                })
+                .catch(error => console.error('Error fetching app data:', error));
+        }
 
-    // Call the function to display app information
-    displayAppInfo();
-</script>
-
+        // Call the function to display app information
+        displayAppInfo();
+    </script>
 </body>
 </html>
